<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_foam_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/timerIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_timer_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/timer_logo_description" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/good_times_rg"
        android:textStyle = "bold"
        android:textSize="20sp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@id/timerIcon"
        app:layout_constraintTop_toBottomOf="@+id/timerIcon" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_settings_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/timerIcon"
        app:layout_constraintBottom_toBottomOf="@id/timerIcon"
        android:contentDescription="@string/settings_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/circleLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        android:background="@drawable/ic_circle"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.Group
            android:id= "@+id/upButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="minutesFirstUpButton, minutesSecondUpButton, secondsFirstUpButton, secondsSecondUpButton"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/minutesFirstUpButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_up"
            app:layout_constraintBottom_toTopOf="@id/timerValue"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/minutesSecondUpButton"
            />

        <ImageView
            android:id="@+id/minutesSecondUpButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_up"
            app:layout_constraintBottom_toTopOf="@id/timerValue"
            app:layout_constraintLeft_toRightOf="@id/minutesFirstUpButton"
            app:layout_constraintRight_toLeftOf="@id/secondsFirstUpButton"
            />

        <ImageView
            android:id="@+id/secondsFirstUpButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_up"
            app:layout_constraintBottom_toTopOf="@id/timerValue"
            app:layout_constraintLeft_toRightOf="@id/minutesSecondUpButton"
            app:layout_constraintRight_toLeftOf="@id/secondsSecondUpButton"
            />

        <ImageView
            android:id="@+id/secondsSecondUpButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_up"
            app:layout_constraintBottom_toTopOf="@id/timerValue"
            app:layout_constraintLeft_toRightOf="@id/secondsFirstUpButton"
            app:layout_constraintRight_toRightOf="parent"
            />


        <TextView
            android:id="@+id/timerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/bruce_forever_regular"
            android:text="00:00"
            tools:ignore="HardcodedText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Group
            android:id= "@+id/downButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="minutesFirstDownButton, minutesSecondDownButton, secondsFirstDownButton, secondsSecondDownButton"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/minutesFirstDownButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toBottomOf="@id/timerValue"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/minutesSecondDownButton"
            />

        <ImageView
            android:id="@+id/minutesSecondDownButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toBottomOf="@id/timerValue"
            app:layout_constraintLeft_toRightOf="@id/minutesFirstDownButton"
            app:layout_constraintRight_toLeftOf="@id/secondsFirstDownButton"
            />

        <ImageView
            android:id="@+id/secondsFirstDownButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toBottomOf="@id/timerValue"
            app:layout_constraintLeft_toRightOf="@id/minutesSecondDownButton"
            app:layout_constraintRight_toLeftOf="@id/secondsSecondDownButton"
            />

        <ImageView
            android:id="@+id/secondsSecondDownButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toBottomOf="@id/timerValue"
            app:layout_constraintLeft_toRightOf="@id/secondsFirstDownButton"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="96dp"
        android:backgroundTint = "@color/light_blue"
        android:text="@string/main_button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/restartIV"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_restart"
        android:contentDescription="@string/restart_button"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@id/mainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/mainButton"
        app:layout_constraintTop_toTopOf="@id/mainButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>